Fix CSS on Firefox

--- a/static/css/subcategories-checker.css
+++ b/static/css/subcategories-checker.css
@@ -64,7 +64,7 @@ body.subcategory-checker ul.categories li[component="categories/category"] .cont
 }
 body.subcategory-checker ul.categories li[component="categories/category"] .content h2 a{
 	display: inline;
-	white-space: pre;
+	white-space: nowrap;
 }
 body.subcategory-checker ul.categories li[component="categories/category"]:before,body.subcategory-checker  ul.categories li[component="categories/category"]:after {
 	display: none;
